--- a/福利姬频道总目录/Bambi밤비全集/menu.html
+++ b/福利姬频道总目录/Bambi밤비全集/menu.html
@@ -17,6 +17,33 @@
   <p><a href="https://telegra.ph/Bambi-밤비---Cafe-Alba-08-25">Bambi (밤비) - Cafe Alba</a></p>
   <p><a href="https://telegra.ph/Bambi밤비---BLUECAKE-Kagerou-Daze-146P-305GB-08-25">Bambi밤비 - [BLUECAKE] Kagerou Daze [146P-3.05GB]</a></p>
   <p><a href="https://telegra.ph/DJAWA-Photo---Bambi-밤비---Le-Chat-Porte-un-Qipao-08-25">DJAWA Photo - Bambi (밤비) - Le Chat Porte un Qípáo</a></p>
-  <p><a href="../index.html">返回总目录</a></p>    
+  <p><a href="https://telegra.ph/DJAWA-Photo---Bambi-밤비---Heart-to-HeartNephthys-Destiny-Child-1-08-26">DJAWA Photo - Bambi (밤비) - Heart to Heart：Nephthys (Destiny Child)-1</a></p>
+  <p><a href="https://telegra.ph/DJAWA-Photo---Bambi-밤비---Heart-to-HeartNephthys-Destiny-Child-08-26">DJAWA Photo - Bambi (밤비) - Heart to Heart：Nephthys (Destiny Child)</a></p>
+  <p><a href="https://telegra.ph/DJAWA-Photo---Bambi-밤비---Destiny-Child---Rita-Paradise-Exiled-ver-08-26">DJAWA Photo - Bambi (밤비) - Destiny Child - Rita (Paradise Exiled ver.)</a></p>
+  <p><a href="https://telegra.ph/DJAWA-Photo---Bambi-밤비---Azur-Lane-HMS-Formidable-08-26">DJAWA Photo - Bambi (밤비) - Azur Lane HMS Formidable</a></p>
+  <p><a href="https://telegra.ph/Bambi밤비---DJAWA-Asunas-Undercover-Mission-128P-351MB-08-26">Bambi밤비 - [DJAWA] Asuna's Undercover Mission [128P-351MB]</a></p>
+  <p><a href="https://telegra.ph/DJAWA-Photo---Bambi-밤비---La-Rose-NoirE-2B-2-08-26">DJAWA Photo - Bambi (밤비) - La Rose NoirE 2B-2</a></p>
+  <p><a href="https://telegra.ph/DJAWA-Photo---Bambi-밤비---La-Rose-NoirE-2B-08-26">DJAWA Photo - Bambi (밤비) - La Rose NoirE 2B</a></p>
+  <p><a href="https://telegra.ph/Bambi밤비---CreamSoda-Vol10-55P-498MB-08-26">Bambi밤비 - [CreamSoda] Vol.10 [55P-498MB]</a></p>
+  <p><a href="https://telegra.ph/Bambi밤비---DJAWA-Christmas-Special-08-26">Bambi밤비 - [DJAWA] Christmas Special</a></p>
+  <p><a href="https://telegra.ph/Bambi밤비---Pure-Media-Vol164-92P-489MB-08-26">Bambi밤비 - [Pure Media] Vol.164 [92P-489MB]</a></p>
+  <p><a href="https://telegra.ph/Bambi밤비---BLUECAKE-Play-Game-81P-138MB-08-26">Bambi밤비 - [BLUECAKE] Play Game [81P-138MB]</a></p>
+  <p><a href="https://telegra.ph/DJAWA-Photo---Bambi-밤비---Sheer-Pink-08-26">DJAWA Photo - Bambi (밤비) - Sheer Pink</a></p>
+  <p><a href="https://telegra.ph/Bambi밤비---DJAWA-God-Mother-Heket-Destiny-Child-51P-1GB-08-26">Bambi밤비 - [DJAWA] God Mother Heket (Destiny Child) [51P-1GB]</a></p>
+  <p><a href="https://telegra.ph/DJAWA-Photo---Bambi-밤비---Queen-of-Passion-08-26">DJAWA Photo - Bambi (밤비) - Queen of Passion</a></p>
+  <p><a href="https://telegra.ph/DJAWA-Photo---Bambi-밤비---Azur-LaneUSS-Saint-Louis-Azur-Lane-08-26">DJAWA Photo - Bambi (밤비) - Azur Lane：USS Saint Louis (Azur Lane)</a></p>
+  <p><a href="https://telegra.ph/DJAWA-Photo---Bambi-밤비---USS-Bremerton-Azur-Lane-Scorching-Hot-Training-08-26">DJAWA Photo - Bambi (밤비) - USS Bremerton (Azur Lane) Scorching-Hot Training</a></p>
+  <p><a href="https://telegra.ph/DJAWA-Photo---Bambi-밤비--Riamus-Celebrating-the-Year-of-the-Cow-2-08-26">DJAWA Photo - Bambi (밤비) – Riamu’s Celebrating the Year of the Cow #2</a></p>
+  <p><a href="https://telegra.ph/DJAWA-Photo---Bambi-밤비---Moral-Guardian-of-School-08-26">DJAWA Photo - Bambi (밤비) - Moral Guardian of School</a></p>
+  <p><a href="https://telegra.ph/Bambi---Fancy-Me-08-26">Bambi - Fancy Me</a></p>
+  <p><a href="https://telegra.ph/Bambi---Angel-de-Rosa-08-26">Bambi - Ángel de Rosa</a></p>
+  <p><a href="https://telegra.ph/Bambi밤비---NO77-CreamSoda-Bambi-VOL11-115P-968MB-08-26">Bambi밤비 - NO.77 [CreamSoda] Bambi VOL.11 [115P-968MB]</a></p>
+  <p><a href="https://telegra.ph/Bambi-밤비--CreamSoda-Cosplay-Serket-126P-188GB-08-26">Bambi (밤비) – [CreamSoda] Cosplay Serket [126P-1.88GB]</a></p>
+  <p><a href="https://telegra.ph/Bambi-jesuis-吉他妹妹-08-26">Bambi jesuis 吉他妹妹</a></p>
+  <p><a href="https://telegra.ph/PURE-Vol115---Bambi-08-26">PURE_Vol.115 - Bambi</a></p>
+  <p><a href="https://telegra.ph/Bambi밤비---NO72-DJAWA-Loose--Tight-Violet-08-26">Bambi밤비 - NO.72 [DJAWA] Loose & Tight ：Violet</a></p>
+  <p><a href="https://telegra.ph/BamBi밤비---NO71-Digital-photobook---Night-Rain-100P-347MB-08-26">BamBi밤비 - NO.71 Digital photobook - Night Rain [100P-347MB]</a></p>
+  <p><a href="https://telegra.ph/Sonson-BamBi밤비-Maid-Mansion-W-153P113G-08-26">Sonson &BamBi밤비 Maid Mansion W [153P1.13G]</a></p>
+  <p><a href="https://telegra.ph/BamBi밤비---NO70-DJAWA-Succubus-2B-119P-204G-08-26">BamBi밤비 - NO.70 [DJAWA] Succubus 2B [119P-2.04G]</a></p> 
 </body>
 </html>
