--- a/福利姬频道总目录/index.html
+++ b/福利姬频道总目录/index.html
@@ -12,6 +12,7 @@
   <hr>
   <h2>福利姬目录</h2>
   <p><a href="./ArtGravia全集/menu.html">ArtGravia全集</a></p> 
+  <p><a href="./Arty亚缇全集/menu.html">Arty亚缇全集</a></p> 
   <p><a href="./Asagiriai（愛ちゃん）全集/menu.html">Asagiriai（愛ちゃん）全集</a></p> 
   <p><a href="./AT鲨全集/menu.html">AT鲨全集</a></p> 
   <p><a href="./Azami全集/menu.html">Azami全集</a></p> 
@@ -35,6 +36,7 @@
   <p><a href="./Hokunaimeko全集/menu.html">Hokunaimeko全集</a></p> 
   <p><a href="./Inkyung (강인경)全集/menu.html">Inkyung (강인경)全集</a></p> 
   <p><a href="./Jelly 全集/menu.html">Jelly 全集</a></p> 
+  <p><a href="./Jenny (정제니)全集/menu.html">Jenny (정제니)全集</a></p> 
   <p><a href="./KANEKO_咔喵全集/menu.html">KANEKO_咔喵全集</a></p> 
   <p><a href="./kaya萱全集/menu.html">kaya萱全集</a></p> 
   <p><a href="./Kitaro_绮太郎全集/menu.html">Kitaro_绮太郎全集</a></p> 
@@ -55,6 +57,7 @@
   <p><a href="./neko酱全集/menu.html">neko酱全集</a></p> 
   <p><a href="./Neppu ネップ全集/menu.html">Neppu ネップ全集</a></p> 
   <p><a href="./NIKKE_HELM_SUMMER_海倫全集/menu.html">NIKKE_HELM_SUMMER_海倫全集</a></p> 
+  <p><a href="./NinJA阿寨寨全集/menu.html">NinJA阿寨寨全集</a></p> 
   <p><a href="./Nyako喵子全集/menu.html">Nyako喵子全集</a></p> 
   <p><a href="./Original全集/menu.html">Original全集</a></p> 
   <p><a href="./Photobooks 姜仁卿 Valentine全集/menu.html">Photobooks 姜仁卿 Valentine全集</a></p> 
@@ -172,6 +175,7 @@
   <p><a href="./少女映画全集/menu.html">少女映画全集</a></p> 
   <p><a href="./少女秩序全集/menu.html">少女秩序全集</a></p> 
   <p><a href="./尤幽 NIKKE全集/menu.html">尤幽 NIKKE全集</a></p> 
+  <p><a href="./尤猫醒醒全集/menu.html">尤猫醒醒全集</a></p> 
   <p><a href="./就是阿朱啊全集/menu.html">就是阿朱啊全集</a></p> 
   <p><a href="./屑雪雪鸭全集/menu.html">屑雪雪鸭全集</a></p> 
   <p><a href="./山崎雷纳全集/menu.html">山崎雷纳全集</a></p> 
@@ -216,8 +220,7 @@
   <p><a href="./杪夏全集/menu.html">杪夏全集</a></p> 
   <p><a href="./林檎全集/menu.html">林檎全集</a></p> 
   <p><a href="./果咩酱w全集/menu.html">果咩酱w全集</a></p> 
-  <p><a href="./柒柒不可爱全集/menu.html">柒柒不可爱全集</a></p> 
-  <p><a href="./柒柒要乖哦全集/menu.html">柒柒要乖哦全集</a></p> 
+  <p><a href="./柒柒不可爱(柒柒要乖哦)全集/menu.html">柒柒不可爱(柒柒要乖哦)全集</a></p> 
   <p><a href="./桃景三酪全集/menu.html">桃景三酪全集</a></p> 
   <p><a href="./桃暖酱全集/menu.html">桃暖酱全集</a></p> 
   <p><a href="./桃良阿宅全集/menu.html">桃良阿宅全集</a></p> 
@@ -252,6 +255,7 @@
   <p><a href="./猪突猛蛋全集/menu.html">猪突猛蛋全集</a></p> 
   <p><a href="./猪饲料全集/menu.html">猪饲料全集</a></p> 
   <p><a href="./猫猫Eui+全集/menu.html">猫猫Eui+全集</a></p> 
+  <p><a href="./王胖胖u全集/menu.html">王胖胖u全集</a></p> 
   <p><a href="./珟_珏Dita全集/menu.html">珟_珏Dita全集</a></p> 
   <p><a href="./瓜希酱全集/menu.html">瓜希酱全集</a></p> 
   <p><a href="./瓦斯塔亚小龙虾全集/menu.html">瓦斯塔亚小龙虾全集</a></p> 
@@ -260,7 +264,6 @@
   <p><a href="./白莉全集/menu.html">白莉全集</a></p> 
   <p><a href="./白莉爱吃巧克力全集/menu.html">白莉爱吃巧克力全集</a></p> 
   <p><a href="./白银81全集/menu.html">白银81全集</a></p> 
-  <p><a href="./皮皮奶全集/menu.html">皮皮奶全集</a></p> 
   <p><a href="./皮皮奶可可爱了啦全集/menu.html">皮皮奶可可爱了啦全集</a></p> 
   <p><a href="./眼酱大魔王w全集/menu.html">眼酱大魔王w全集</a></p> 
   <p><a href="./矢量鱼全集/menu.html">矢量鱼全集</a></p> 
@@ -283,6 +286,7 @@
   <p><a href="./肥肥雅全集/menu.html">肥肥雅全集</a></p> 
   <p><a href="./胡桃喵全集/menu.html">胡桃喵全集</a></p> 
   <p><a href="./胡桃猫Kurumineko全集/menu.html">胡桃猫Kurumineko全集</a></p> 
+  <p><a href="./舞小喵全集/menu.html">舞小喵全集</a></p> 
   <p><a href="./艾西aiwest全集/menu.html">艾西aiwest全集</a></p> 
   <p><a href="./芋圆侑子全集/menu.html">芋圆侑子全集</a></p> 
   <p><a href="./芦苇苇苇全集/menu.html">芦苇苇苇全集</a></p> 
@@ -311,7 +315,7 @@
   <p><a href="./走路摇zly全集/menu.html">走路摇zly全集</a></p> 
   <p><a href="./起司块wii 起起子全集/menu.html">起司块wii 起起子全集</a></p> 
   <p><a href="./趴趴捣蛋陌全集/menu.html">趴趴捣蛋陌全集</a></p> 
-  <p><a href="./軟妹搖搖樂 [Fantia] 软妹摇摇乐/menu.html">軟妹搖搖樂 [Fantia] 软妹摇摇乐</a></p> 
+  <p><a href="./軟妹搖搖樂w [Fantia] 软妹摇摇乐/menu.html">軟妹搖搖樂w [Fantia] 软妹摇摇乐</a></p> 
   <p><a href="./轩萧学姐全集/menu.html">轩萧学姐全集</a></p> 
   <p><a href="./过期米线线喵全集/menu.html">过期米线线喵全集</a></p> 
   <p><a href="./迷之呆梨(发条少女)全集/menu.html">迷之呆梨(发条少女)全集</a></p> 
