--- a/福利姬频道总目录/九曲jean全集/menu.html
+++ b/福利姬频道总目录/九曲jean全集/menu.html
@@ -25,7 +25,15 @@
   <p><a href="https://telegra.ph/九曲Jean---姐姐的粉色竞泳-60P2V-365MB-08-25">九曲Jean - 姐姐的粉色竞泳 [60P2V-365MB]</a></p>
   <p><a href="https://telegra.ph/九曲Jean---镇海-40P-702MB-08-25">九曲Jean - 镇海 [40P-702MB]</a></p>
   <p><a href="https://telegra.ph/九曲jean-私房照吊带袜x液6月29会员资源-08-25">九曲jean 私房照吊带袜x液（6月29会员资源）</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/九曲Jean---爱宕婚纱-41P-271MB-08-26">九曲Jean - 爱宕婚纱 [41P-271MB]</a></p>
+  <p><a href="https://telegra.ph/九曲---紫式部同人内衣-08-26">九曲 - 紫式部同人内衣</a></p>
+  <p><a href="https://telegra.ph/九曲-定制剑圣女-08-26">九曲 定制剑圣女</a></p>
+  <p><a href="https://telegra.ph/九曲Jean---NO67-碧蓝航线-加利索新春旗袍-24P-557MB-08-26">九曲Jean - NO.67 碧蓝航线 加利索新春旗袍 [24P-557MB]</a></p>
+  <p><a href="https://telegra.ph/九曲Jean---NO66-魅魔姐姐-39P-299MB-08-26">九曲Jean - NO.66 魅魔姐姐 [39P-299MB]</a></p>
+  <p><a href="https://telegra.ph/九曲Jean---NO65-柴郡自拍-16P-32MB-08-26">九曲Jean - NO.65 柴郡自拍 [16P-32MB]</a></p>
+  <p><a href="https://telegra.ph/九曲Jean---NO65-柴郡自拍-16P-32MB-08-26-2">九曲Jean - NO.65 柴郡自拍 [16P-32MB]</a></p>
+  <p><a href="https://telegra.ph/九曲Jean---NO64-吾妻旗袍-23P-310MB-08-26">九曲Jean - NO.64 吾妻旗袍 [23P-310MB]</a></p>
+  <p><a href="https://telegra.ph/九曲Jean---粉发美女-46P-214MB-08-26">九曲Jean - 粉发美女 [46P-214MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
