--- a/福利姬频道总目录/星之迟迟全集/menu.html
+++ b/福利姬频道总目录/星之迟迟全集/menu.html
@@ -140,6 +140,17 @@
   <p><a href="https://telegra.ph/星之迟迟-黑江雫-08-25">星之迟迟 黑江雫</a></p>
   <p><a href="https://telegra.ph/星之迟迟---豹纹泳衣-24P-91MB-08-25">星之迟迟 - 豹纹泳衣 24P 91MB</a></p>
   <p><a href="https://telegra.ph/星之迟迟-换装竞泳-08-25">星之迟迟 换装竞泳</a></p>
-
+  <p><a href="https://telegra.ph/星之迟迟-滴水JK-08-26">星之迟迟 滴水JK</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-碧蓝航线镇海-08-26">星之迟迟 碧蓝航线镇海</a></p>
+  <p><a href="https://telegra.ph/星之迟迟---Darling阿达尔伯特-08-26">星之迟迟 - 《Darling》阿达尔伯特</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-Darling大凤-08-26">星之迟迟 Darling大凤</a></p>
+  <p><a href="https://telegra.ph/星之迟迟---White-Dog-Hook-08-26">星之迟迟 - White Dog Hook</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-风纪委员-08-26">星之迟迟 风纪委员</a></p>
+  <p><a href="https://telegra.ph/星之迟迟---NO96-08-26">星之迟迟 - NO.96</a></p>
+  <p><a href="https://telegra.ph/星之迟迟---NO97-08-26">星之迟迟 - NO.97</a></p>
+  <p><a href="https://telegra.ph/星之迟迟---NO95-08-26">星之迟迟 - NO.95</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-情人节to-love梦梦套组-140P31分钟视频-08-26">星之迟迟 情人节《to love》梦梦套组 140P+31分钟视频</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-08-26">星之迟迟</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-08-26-2">星之迟迟</a></p>
 </body>
 </html>
