--- a/福利姬频道总目录/柒柒不可爱(柒柒要乖哦)全集/menu.html
+++ b/福利姬频道总目录/柒柒不可爱(柒柒要乖哦)全集/menu.html
@@ -41,6 +41,25 @@
   <p><a href="https://telegra.ph/柒柒不可爱-粉红护士6月10会员资源-08-25">柒柒不可爱 粉红护士（6月10会员资源）</a></p>
   <p><a href="https://telegra.ph/柒柒不可爱--晚间约会617会员资源-08-25">柒柒不可爱 – 晚间约会（6.17会员资源）</a></p>
   <p><a href="https://telegra.ph/柒柒不可爱-粉红护士6月10会员资源-08-25">柒柒不可爱 粉红护士（6月10会员资源）</a></p>
-
+  <p><a href="https://telegra.ph/柒柒要乖哦-透明死库水和白T-08-24">柒柒要乖哦 透明死库水和白T</a></p>
+  <p><a href="https://telegra.ph/柒柒要乖哦---黄昏-41P-349MB-08-25">柒柒要乖哦 - 黄昏 [41P-349MB]</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱-天台学姐-80P1V-08-26">柒柒不可爱 天台学姐 80P+1V</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱---午后JK-34P-133MB-08-26">柒柒不可爱 - 午后JK 34P 133MB</a></p>
+  <p><a href="https://telegra.ph/柒柒要乖哦--骑行少女-47P-176MB-08-26">柒柒要乖哦 – 骑行少女 47P 176MB</a></p>
+  <p><a href="https://telegra.ph/柒柒要乖哦--家庭教师-123P189GB-08-26">柒柒要乖哦 – 家庭教师 123P1.89GB</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱-深夜公园JK-36P-08-26">柒柒不可爱 深夜公园JK 36P</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱---自拍辣妹旗袍-47P1V-08-26">柒柒不可爱 - 自拍辣妹旗袍 47P+1V</a></p>
+  <p><a href="https://telegra.ph/柒柒要乖哦--魅魔出差-46P1V288MB-08-26">柒柒要乖哦 – 魅魔出差 46P1V288MB</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱---竞泳水着-08-26">柒柒不可爱 - 竞泳水着</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱-车内2-60P-08-26">柒柒不可爱 车内2 60P</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱-车内-47P-08-26">柒柒不可爱 车内 47P</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱-小僵尸-08-26">柒柒不可爱 小僵尸</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱-乐园JK-08-26">柒柒不可爱 乐园JK</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱-08-26">柒柒不可爱</a></p>
+  <p><a href="https://telegra.ph/柒柒要乖额---NO08-白液俘虏-80P-141MB-08-26">柒柒要乖额 - NO.08 白液俘虏 [80P-141MB]</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱--私服-59P-08-26">柒柒不可爱 – 私服 59P</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱---婚纱-53P-08-26">柒柒不可爱 - 婚纱 53P</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱-08-26-2">柒柒不可爱</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱柒柒要乖哦-校服42P-1V-08-26">柒柒不可爱（柒柒要乖哦） 校服42P 1V</a></p>
 </body>
 </html>
