--- a/福利姬频道总目录/軟妹搖搖樂w [Fantia] 软妹摇摇乐/menu.html
+++ b/福利姬频道总目录/軟妹搖搖樂w [Fantia] 软妹摇摇乐/menu.html
@@ -29,24 +29,8 @@
   <p><a href="https://telegra.ph/軟妹搖搖樂-纯白1月6打赏群资源-08-24">軟妹搖搖樂 纯白（1月6打赏群资源）</a></p>
   <p><a href="https://telegra.ph/軟妹搖搖樂---Fantia-08-25">軟妹搖搖樂 - [Fantia] -</a></p>
   <p><a href="https://telegra.ph/軟妹搖搖樂---Fantia-08-25-2">軟妹搖搖樂 - [Fantia] -</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/軟妹搖搖樂w-1月订阅-08-26">軟妹搖搖樂w 1月订阅</a></p>
+  <p><a href="https://telegra.ph/軟妹搖搖樂w-1月订阅-08-26-2">軟妹搖搖樂w 1月订阅</a></p>
+  <p><a href="https://telegra.ph/軟妹搖搖樂w-1月订阅-08-26-3">軟妹搖搖樂w 1月订阅</a></p>
 </body>
 </html>
