--- a/福利姬频道总目录/迷之呆梨(发条少女)全集/menu.html
+++ b/福利姬频道总目录/迷之呆梨(发条少女)全集/menu.html
@@ -70,7 +70,15 @@
   <p><a href="https://telegra.ph/发条少女---学姐の黑丝诱惑-70P3V600M-08-25">发条少女 - 学姐の黑丝诱惑 [70P3V600M]</a></p>
   <p><a href="https://telegra.ph/发条少女---天使-08-25">发条少女 - 天使</a></p>
   <p><a href="https://telegra.ph/迷之呆梨-Yor-Forger-约尔福杰-08-25">迷之呆梨 Yor Forger 约尔·福杰</a></p>
-
+  <p><a href="https://telegra.ph/スポーツウェア-23P-105MB-08-26">迷之呆梨 发条少女 スポーツウェア🎧 [23P-105MB]</a></p>
+  <p><a href="https://telegra.ph/これは私たちの秘密-22P1V-139MB-08-26">迷之呆梨 发条少女 これは私たちの秘密 [22P1V-139MB]</a></p>
+  <p><a href="https://telegra.ph/今日着る下着-15P1V-99MB-08-26">迷之呆梨 发条少女  今日着る下着 [15P1V-99MB]</a></p>
+  <p><a href="https://telegra.ph/やんちゃ-18P1V-108MB-08-26">迷之呆梨 发条少女 やんちゃ～ [18P1V-108MB]</a></p>
+  <p><a href="https://telegra.ph/白ストッキング後輩-20P1V-123MB-08-26">迷之呆梨 发条少女 白ストッキング後輩 [20P1V-123MB]</a></p>
+  <p><a href="https://telegra.ph/宁宁---Jk之居家-08-26">迷之呆梨 发条少女 宁宁 - Jk之居家</a></p>
+  <p><a href="https://telegra.ph/妹妹-15P1V-83MB-08-26">迷之呆梨 发条少女 妹妹♪ [15P1V-83MB]</a></p>
+  <p><a href="https://telegra.ph/新しいパジャマきれいですか-20P1V-116MB-08-26">迷之呆梨 发条少女 新しいパジャマ…きれいですか？🎀 [20P1V-116MB]</a></p>
+  <p><a href="https://telegra.ph/最も优しい狼-20P1V-101MB-08-26">迷之呆梨 发条少女 最も优しい狼💕 [20P1V-101MB]</a></p>
 
 </body>
 </html>
