--- a/福利姬频道总目录/一北亦北(亦南南南)全集/menu.html
+++ b/福利姬频道总目录/一北亦北(亦南南南)全集/menu.html
@@ -21,5 +21,10 @@
   <p><a href="https://telegra.ph/亦南南南---吉他妹妹6月30会员资源cosplay写真NSFW频道-httpstmedouza-08-25">亦南南南 - 吉他妹妹（6月30会员资源）cosplay写真[NSFW]频道 https://t.me/douza</a></p>
   <p><a href="https://telegra.ph/亦南南南-洛可可时代-束身衣版-08-25">亦南南南 洛可可时代 束身衣版</a></p>
   <p><a href="https://telegra.ph/亦南南南---天命之子玉藻前-08-25">亦南南南 - 天命之子玉藻前</a></p>
+  <p><a href="https://telegra.ph/一北亦北-白裙私房-20P-202MB-08-26">一北亦北 白裙私房 【20P-202MB】</a></p>
+  <p><a href="https://telegra.ph/一北亦北---NO17-寒烟烟烟-侍神令-47P-742MB-08-26">一北亦北 - NO.17 &寒烟烟烟 侍神令 [47P-742MB]</a></p>
+  <p><a href="https://telegra.ph/一北亦北---NO16-人妻妻子-44P7V-27MB-08-26">一北亦北 - NO.16 人妻妻子 [44P7V-27MB]</a></p>
+  <p><a href="https://telegra.ph/一北亦北---NO17-奶光新春旗袍-42P1V-540MB-08-26">一北亦北 - NO.17 奶光新春旗袍 [42P1V-540MB]</a></p>
+
 </body>
 </html>
