--- a/福利姬频道总目录/一米八的大梨子全集/menu.html
+++ b/福利姬频道总目录/一米八的大梨子全集/menu.html
@@ -20,6 +20,8 @@
   <p><a href="https://telegra.ph/黑贞女仆特典30P-229MB-08-25">一米八的大梨子 黑贞女仆特典[30P 229MB]</a></p>
   <p><a href="https://telegra.ph/修女-36P-118MB-08-25">一米八的大梨子 修女 [36P-118MB]</a></p>
   <p><a href="https://telegra.ph/一米八的大梨子---旗袍纹-10P-79MB-08-25">一米八的大梨子 - 旗袍纹 [10P-79MB]</a></p>
-  
+  <p><a href="https://telegra.ph/一米八的大梨子---胖次集-08-26">一米八的大梨子 - 胖次集</a></p>
+  <p><a href="https://telegra.ph/一米八的大梨子---NO015-思念如苦海-40P-200MB-08-26">一米八的大梨子 - NO.015 思念如苦海 [40P-200MB]</a></p>
+
 </body>
 </html>
