--- a/福利姬频道总目录/秋和柯基全集/menu.html
+++ b/福利姬频道总目录/秋和柯基全集/menu.html
@@ -22,7 +22,22 @@
   <p><a href="https://telegra.ph/秋和柯基-奶桃桃-电车-08-25">秋和柯基 奶桃桃 电车</a></p>
   <p><a href="https://telegra.ph/秋和柯基-莉莉丝-08-25">秋和柯基 莉莉丝</a></p>
   <p><a href="https://telegra.ph/秋和柯基---裸色蕾丝吊袜带套装-08-25">秋和柯基 - 裸色蕾丝吊袜带套装</a></p>
-
+  <p><a href="https://telegra.ph/秋和柯基--秋影-66P-1V-182GB-08-26">秋和柯基 – 秋影 66P 1V 1.82GB</a></p>
+  <p><a href="https://telegra.ph/秋和柯基-霸凌日记-08-26">秋和柯基 霸凌日记</a></p>
+  <p><a href="https://telegra.ph/秋和柯基---猎魔人-40P1V990MB-08-26">秋和柯基 - 猎魔人 40P1V990MB</a></p>
+  <p><a href="https://telegra.ph/秋和柯基--推进之王33P438MB-08-26">秋和柯基 – 推进之王33P438MB</a></p>
+  <p><a href="https://telegra.ph/秋和柯基---风息地牢-49P1V-178GB-08-26">秋和柯基 - 风息地牢 [49P1V-1.78GB]</a></p>
+  <p><a href="https://telegra.ph/秋和柯基--星奈-08-26">秋和柯基 – 星奈</a></p>
+  <p><a href="https://telegra.ph/秋和柯基---紫-40P1V-969MB-08-26">秋和柯基 - 紫 [40P1V-969MB]</a></p>
+  <p><a href="https://telegra.ph/秋和柯基---超小比基尼-50P1V-118GB-08-26">秋和柯基 - 超小比基尼 [50P1V-1.18GB]</a></p>
+  <p><a href="https://telegra.ph/秋和柯基---花洒姐姐-52P1V-960MB-08-26">秋和柯基 - 花洒姐姐 [52P1V-960MB]</a></p>
+  <p><a href="https://telegra.ph/秋和柯基--忍者的刺杀46P-495MB-08-26">秋和柯基 – 忍者的刺杀46P 495MB</a></p>
+  <p><a href="https://telegra.ph/秋和柯基---红-40P-464MB-08-26">秋和柯基 - 红 [40P-464MB]</a></p>
+  <p><a href="https://telegra.ph/秋和柯基-嗜血印-08-26">秋和柯基 嗜血印</a></p>
+  <p><a href="https://telegra.ph/秋和柯基-绿墙-08-26">秋和柯基 绿墙</a></p>
+  <p><a href="https://telegra.ph/秋和柯基-警匪游戏-08-26">秋和柯基 警匪游戏</a></p>
+  <p><a href="https://telegra.ph/秋和柯基-粉-08-26">秋和柯基 粉</a></p>
+  <p><a href="https://telegra.ph/秋和柯基---年末聚会-42P1V-120GB-08-26">秋和柯基 - 年末聚会 [42P1V-1.20GB]</a></p>
 
 </body>
 </html>
