--- a/福利姬频道总目录/稚乖画册全集/menu.html
+++ b/福利姬频道总目录/稚乖画册全集/menu.html
@@ -18,6 +18,12 @@
   <p><a href="https://telegra.ph/稚乖画册---夜夜-死库水-88P1V-242GB-08-25">稚乖画册 - 夜夜 死库水 [88P1V-2.42GB]</a></p>
   <p><a href="https://telegra.ph/稚乖画册---夜夜逛街-60P-459MB-08-25">稚乖画册 - 夜夜逛街 [60P-459MB]</a></p>
   <p><a href="https://telegra.ph/稚乖画册---新堂01-团子-65P1V-871MB-08-25">稚乖画册 - 新堂01 团子 [65P1V-871MB]</a></p>
-
+  <p><a href="https://telegra.ph/稚乖画册-赤西夜夜---晴空02June-15-08-26">稚乖画册 赤西夜夜 - 晴空02June 15,</a></p>
+  <p><a href="https://telegra.ph/稚乖画册---NO06-新年福利-43P-350MB-08-26">稚乖画册 - NO.06 新年福利 [43P-350MB]</a></p>
+  <p><a href="https://telegra.ph/稚乖画册--NO05-晴空03-双马尾jk-71P1V-099GB-08-26">稚乖画册 – NO.05 晴空03 双马尾jk [71P1V-0.99GB]</a></p>
+  <p><a href="https://telegra.ph/稚乖画册---夜夜女仆-08-26">稚乖画册 - 夜夜女仆</a></p>
+  <p><a href="https://telegra.ph/稚乖画册---NO03-体操服-70P1V-159GB-08-26">稚乖画册 - NO.03 体操服 [70P1V-1.59GB]</a></p>
+  <p><a href="https://telegra.ph/稚乖画册---NO02-颓废01-短裙白丝-73P-596MB-08-26">稚乖画册 - NO.02 颓废01 短裙白丝 [73P-596MB]</a></p>
+  <p><a href="https://telegra.ph/稚乖画册---NO01-晴空01-白丝双马尾jk-79P-600MB-08-26">稚乖画册 - NO.01 晴空01 白丝双马尾jk [79P-600MB]</a></p>
 </body>
 </html>
