--- a/福利姬频道总目录/Luisa_零纱全集/menu.html
+++ b/福利姬频道总目录/Luisa_零纱全集/menu.html
@@ -12,6 +12,15 @@
   <p><a href="https://telegra.ph/Luisa-%E9%9B%B6%E7%BA%B1-%E6%9F%B4%E9%83%A1%E6%97%97%E8%A2%8D43P-08-21">Luisa_零纱 柴郡旗袍43P</a></p>  
   <p><a href="https://telegra.ph/Luisa-零纱-FGO-兔女郎阿尔托莉雅-08-25">Luisa_零纱 FGO 兔女郎阿尔托莉雅</a></p>
   <p><a href="https://telegra.ph/Luisa-零纱-新泽西兔女郎-35P-424MB-08-25">Luisa_零纱 新泽西兔女郎 [35P-424MB]</a></p>
- 
+  <p><a href="https://telegra.ph/Luisa---喜多川海梦-48P-749MB-08-26">Luisa - 喜多川海梦 [48P-749MB]</a></p>
+  <p><a href="https://telegra.ph/Luisa-零纱---西施-08-26">Luisa_零纱 - 西施</a></p>
+  <p><a href="https://telegra.ph/Luisa-零纱---喜多川海梦-08-26">Luisa_零纱 - 喜多川海梦</a></p>
+  <p><a href="https://telegra.ph/福利COS-Luisa-零纱---兔女郎阿尔托莉雅-08-26">Luisa_零纱 - 兔女郎阿尔托莉雅</a></p>
+  <p><a href="https://telegra.ph/福利COS-Luisa-零纱---新泽西兔女郎-08-26">Luisa_零纱 - 新泽西兔女郎</a></p>
+  <p><a href="https://telegra.ph/Luisa-零纱---吾妻婚纱-08-26">Luisa_零纱 - 吾妻婚纱</a></p>
+  <p><a href="https://telegra.ph/Luisa-零纱---樱园浴衣-08-26">Luisa_零纱 - 樱园浴衣</a></p>
+  <p><a href="https://telegra.ph/Luisa-零纱---玛修女仆-08-26">Luisa_零纱 - 玛修女仆</a></p>
+  <p><a href="https://telegra.ph/Luisa-零纱---黑枪呆女仆-08-26">Luisa_零纱 - 黑枪呆女仆</a></p>
+
 </body>
 </html>
