--- a/福利姬频道总目录/Shika小鹿鹿全集/menu.html
+++ b/福利姬频道总目录/Shika小鹿鹿全集/menu.html
@@ -21,7 +21,48 @@
   <p><a href="https://telegra.ph/Shika小鹿鹿---NO80-喜多川海梦-23P1V-164MB-08-26">Shika小鹿鹿 - NO.80 喜多川海梦 [23P1V-164MB]</a></p>
   <p><a href="https://telegra.ph/Shika小鹿鹿---NO78-泳装-63P-107MB-08-26">Shika小鹿鹿 - NO.78 泳装 [63P-107MB]</a></p>
   <p><a href="https://telegra.ph/Shika小鹿鹿---NO77-透明女仆-22P-438MB-08-26">Shika小鹿鹿 - NO.77 透明女仆 [22P-438MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/小鹿鹿-喜多川海梦泳装-08-26">小鹿鹿 喜多川海梦泳装</a></p>
+  <p><a href="https://telegra.ph/Shika小鹿鹿---鹳鸟踟蹰-08-26">Shika小鹿鹿 - 鹳鸟踟蹰</a></p>
+  <p><a href="https://telegra.ph/Shika小鹿鹿---黑山梗菜-08-26">Shika小鹿鹿 - 黑山梗菜</a></p>
+  <p><a href="https://telegra.ph/福利COS-Shika小鹿鹿---长发姑娘-08-26">Shika小鹿鹿 - 长发姑娘</a></p>
+  <p><a href="https://telegra.ph/Shika小鹿鹿---艾达王旗袍-08-26">Shika小鹿鹿 -   艾达王旗袍</a></p>
+  <p><a href="https://telegra.ph/Shika小鹿鹿---黑山梗菜-08-26-2">Shika小鹿鹿 - 黑山梗菜</a></p>
+  <p><a href="https://telegra.ph/Shika小鹿鹿---杨玉环-08-26">Shika小鹿鹿 - 杨玉环</a></p>
+  <p><a href="https://telegra.ph/Shika小鹿鹿---this-is-shika-08-26">Shika小鹿鹿 - this is shika</a></p>
+  <p><a href="https://telegra.ph/Shika小鹿鹿---碧蓝航线-镇海-08-26">Shika小鹿鹿 - 碧蓝航线 镇海</a></p>
+  <p><a href="https://telegra.ph/网红COSER-Shika小鹿鹿---修女-08-26">Shika小鹿鹿 - 修女</a></p>
+  <p><a href="https://telegra.ph/福利COS-Shika小鹿鹿---羽鸟-08-26">Shika小鹿鹿 - 羽鸟</a></p>
+  <p><a href="https://telegra.ph/福利COS-Shika小鹿鹿---喜多川海梦-小雫内衣-08-26">Shika小鹿鹿 - 喜多川海梦 小雫内衣</a></p>
+  <p><a href="https://telegra.ph/福利COS-Shika小鹿鹿---蔷薇JK-08-26">Shika小鹿鹿 - 蔷薇JK</a></p>
+  <p><a href="https://telegra.ph/福利COS-Shika小鹿鹿---this-is-shika-08-26">Shika小鹿鹿 - this is shika</a></p>
+  <p><a href="https://telegra.ph/福利COS-Shika小鹿鹿---半透浴室-08-26">Shika小鹿鹿 - 半透浴室</a></p>
+  <p><a href="https://telegra.ph/福利COS-Shika小鹿鹿---恶毒-08-26">Shika小鹿鹿 - 恶毒</a></p>
+  <p><a href="https://telegra.ph/福利COS-Shika小鹿鹿---吉他妹妹-08-26">Shika小鹿鹿 - 吉他妹妹</a></p>
+  <p><a href="https://telegra.ph/福利COS-Shika小鹿鹿---喜多川海梦-08-26">Shika小鹿鹿 - 喜多川海梦</a></p>
+  <p><a href="https://telegra.ph/福利COS-Shika小鹿鹿---喜多川海梦泳装-08-26">Shika小鹿鹿 - 喜多川海梦泳装</a></p>
+  <p><a href="https://telegra.ph/福利COS-Shika小鹿鹿---泳装-08-26">Shika小鹿鹿 - 泳装</a></p>
+  <p><a href="https://telegra.ph/福利COS-Shika小鹿鹿---透明女仆-08-26">Shika小鹿鹿 - 透明女仆</a></p>
+  <p><a href="https://telegra.ph/喵糖映画-HML010-小鹿鹿-爱宕旗袍-08-26">HML.010 小鹿鹿  爱宕旗袍</a></p>
+  <p><a href="https://telegra.ph/喵糖映画-HML011-小鹿鹿-蜂糖花旗袍-08-26">HML.011 小鹿鹿 蜂糖花旗袍</a></p>
+  <p><a href="https://telegra.ph/喵糖映画-VOL143-小鹿鹿-日系白T私房-08-26">VOL.143 小鹿鹿 日系白T私房</a></p>
+  <p><a href="https://telegra.ph/喵糖映画-VOL144-小鹿鹿-死库水之温泉-08-26">VOL.144 小鹿鹿 死库水之温泉</a></p>
+  <p><a href="https://telegra.ph/喵糖映画-VOL147-小鹿鹿-白色泳装之温泉-08-26">VOL.147 小鹿鹿 白色泳装之温泉</a></p>
+  <p><a href="https://telegra.ph/喵糖映画-VOL148-小鹿鹿-女友的暖阳私房-08-26">VOL.148 小鹿鹿 女友的暖阳私房</a></p>
+  <p><a href="https://telegra.ph/喵糖映画-TML011-小鹿鹿-麻衣学姐兔女郎-08-26">TML.011 小鹿鹿 麻衣学姐兔女郎</a></p>
+  <p><a href="https://telegra.ph/喵糖映画-VOL260-小鹿鹿-居家女友-08-26">VOL.260 小鹿鹿 居家女友</a></p>
+  <p><a href="https://telegra.ph/喵糖映画-VOL280-小鹿鹿-居家女友-08-26">VOL.280 小鹿鹿 居家女友</a></p>
+  <p><a href="https://telegra.ph/喵糖映画-VOL463-小鹿鹿-窗前女友-08-26">VOL.463 小鹿鹿 窗前女友</a></p>
+  <p><a href="https://telegra.ph/萝莉COS-Shika小鹿鹿---和服-08-26">Shika小鹿鹿 - 和服</a></p>
+  <p><a href="https://telegra.ph/萝莉COS-Shika小鹿鹿---学姐旗袍-08-26">Shika小鹿鹿 - 学姐旗袍</a></p>
+  <p><a href="https://telegra.ph/萝莉COS-Shika小鹿鹿---樱花-08-26">Shika小鹿鹿 - 樱花</a></p>
+  <p><a href="https://telegra.ph/萝莉COS-Shika小鹿鹿---浴缸-08-26">Shika小鹿鹿 - 浴缸</a></p>
+  <p><a href="https://telegra.ph/萝莉COS-Shika小鹿鹿---日系-08-26">Shika小鹿鹿 - 日系</a></p>
+  <p><a href="https://telegra.ph/萝莉COS-Shika小鹿鹿---长发姑娘-08-26">Shika小鹿鹿 - 长发姑娘</a></p>
+  <p><a href="https://telegra.ph/萝莉COS-Shika小鹿鹿---爱宕-同人福利-08-26">Shika小鹿鹿 - 爱宕 同人福利</a></p>
+  <p><a href="https://telegra.ph/萝莉COS-Shika小鹿鹿---内衣白衬衣-08-26">Shika小鹿鹿 - 内衣+白衬衣</a></p>
+  <p><a href="https://telegra.ph/萝莉COS-Shika小鹿鹿---玛修-08-26">Shika小鹿鹿 - 玛修</a></p>
+  <p><a href="https://telegra.ph/萝莉COS-Shika小鹿鹿---爱宕旗袍-08-26">Shika小鹿鹿 - 爱宕旗袍</a></p>
+  <p><a href="https://telegra.ph/萝莉COS-Shika小鹿鹿---天火泳装-08-26">Shika小鹿鹿 - 天火泳装</a></p>
+
 </body>
 </html>
